--- a/be/.env
+++ b/be/.env
@@ -1,2 +1,5 @@
 MONGO_URI=mongodb+srv://durgaprasadvulla24:8qD1pIXsHa8KJYc6@cluster2.li5bg96.mongodb.net/url-shortener
-BASE=http://localhost:5000
+BASE=https://url-shortener-01x0.onrender.com
+FRONTEND_URL=https://url-shortener-three-red.vercel.app
+NODE_ENV=production
+ADMIN_KEY=admin123
